
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int distro; } ;


 int dprintf (char*) ;
 unsigned long get_kernel_addr_trusty (char*,int) ;
 unsigned long get_kernel_addr_xenial (char*,int) ;
 size_t kernel ;
 TYPE_1__* kernels ;
 int mmap_syslog (char**,int*) ;
 scalar_t__ strcmp (char*,int ) ;

unsigned long get_kernel_addr_syslog() {
 unsigned long addr = 0;
 char* syslog;
 int size;

 dprintf("[.] trying syslog...\n");

 if (!mmap_syslog(&syslog, &size))
  return 0;

 if (strcmp("trusty", kernels[kernel].distro) == 0)
  addr = get_kernel_addr_trusty(syslog, size);
 if (strcmp("xenial", kernels[kernel].distro) == 0)
  addr = get_kernel_addr_xenial(syslog, size);

 if (!addr)
  dprintf("[-] kernel base not found in syslog\n");

 return addr;
}
